# cube-type-extract-rs

./: .gitignore  Cargo.toml  bench.md  readme.md
.github/workflows/: release.yml  rust-clippy.yml  rust.yml
src/: configuration.rs  generator.rs  main.rs
