[package]
name = "cube-type-extract-rs"
version = "0.0.5"
edition = "2024"
authors = ["mikkurogue"]

[dependencies]
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
reqwest = {version = "0.12.15", features = ["json", "blocking"]}
tokio = {version = "1", features = ["full"]}
indicatif = "0.17.11"
clap = { version = "4.5.32", features = ["derive"] }
